--- a/src.asp/DZzzz.Learning.Core.Routing.Advanced/Views/Shared/Result.cshtml
+++ b/src.asp/DZzzz.Learning.Core.Routing.Advanced/Views/Shared/Result.cshtml
@@ -38,6 +38,8 @@
                 </tr>
             </tbody>
         </table>
+        <a asp-action="CustomVariable">This is outgoing URL (Same controller)</a><br />
+        <a asp-controller="Admin" asp-action="Index">This is outgoing URL (Admin controller)</a>
     </div>
 </body>
 </html>
