--- a/src.asp/DZzzz.Learning.Core.View.Components/Views/Shared/_Layout.cshtml
+++ b/src.asp/DZzzz.Learning.Core.View.Components/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using DZzzz.Learning.Core.View.Components.Components
+<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -11,10 +12,14 @@
         <div class="row text-white">
             <div class="col-7"><h1>Products</h1></div>
             <div class="col-5">
-                <div class="bg-info text-center m-1 p-1">City Placeholder</div>
+                @*@await Component.InvokeAsync("Poco") poco view component rendering*@
+                @*@await Component.InvokeAsync(nameof(CitySummary))*@
+                @*@await Component.InvokeAsync(nameof(CitySummary), new { showList = true })*@
+                @await Component.InvokeAsync("ComboComponent")
             </div>
         </div>
     </div>
     <div class="m-1 p-1">@RenderBody()</div>
+    @await Component.InvokeAsync("PageSize")
 </body>
 </html>
