--- a/src.asp/DZzzz.Learning.Core.BuiltIn.Tag.Helpers/Views/Home/Index.cshtml
+++ b/src.asp/DZzzz.Learning.Core.BuiltIn.Tag.Helpers/Views/Home/Index.cshtml
@@ -3,22 +3,23 @@
 
 <table class="table table-sm table-bordered">
     <thead class="bg-primary text-white">
-    <tr>
-        <th>Name</th>
-        <th>Country</th>
-        <th class="text-right">Population</th>
-    </tr>
+        <tr>
+            <th>Name</th>
+            <th>Country</th>
+            <th class="text-right">Population</th>
+        </tr>
     </thead>
     <tbody>
-    @foreach (var city in Model)
-    {
-        <tr>
-            <td>@city.Name</td>
-            <td>@city.Country</td>
-            <td class="text-right">@city.Population?.ToString("#,###")</td>
-        </tr>
-    }
+        @foreach (var city in Model)
+        {
+            <tr>
+                <td>@city.Name</td>
+                <td>@city.Country</td>
+                <td class="text-right">@city.Population?.ToString("#,###")</td>
+            </tr>
+        }
     </tbody>
 </table>
 
-<a href="/Home/Create" class="btn btn-primary">Create</a>
+@*AnchorTagHelper*@
+<a asp-action="Create" class="btn btn-primary">Create</a>
